app-test/testdata/typesystem/pos/pattern-matching-analysis-unreachability-algebraic-type/src/patmat.cal
namespace patmat:
    type T : A | B(int n) end
    actor UnreachabilityAlgebraicType() ==> int OUT:
        T t;
        do
            OUT <--
                case t of
                    _ : 0 end
                    B(1) : 1 end
                end;
        end
    end
end
